최종 수정 완료 but, 멀티쓰레드를 넣을 수 있다면 넣고싶음

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -909,6 +909,20 @@ PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_SetFieldsInStruct.PinOptions=True
+K2Node_BreakStruct.PinOptions=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -960,7 +974,7 @@ ContentBrowserTab1.CurrentViewType=1
 
 [RootWindow]
 ScreenPosition=X=84.000 Y=32.000
-WindowSize=X=1292.800 Y=732.800
+WindowSize=X=1294.400 Y=734.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2105,7 +2119,7 @@ NewLevelDialog.TimeStamp=2024.09.19-01.55.00
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2024.09.19-01.54.50
 HierarchicalLODUtilities.LastCompileMethod=Unknown
-Opcua_Unreal_Client.TimeStamp=2024.09.25-09.00.38
+Opcua_Unreal_Client.TimeStamp=2024.09.26-00.51.02
 Opcua_Unreal_Client.LastCompileMethod=Runtime
 ExternalImagePicker.TimeStamp=2024.09.19-01.54.48
 ExternalImagePicker.LastCompileMethod=Unknown
@@ -2166,8 +2180,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2293,7 +2307,7 @@ EditableTextBox.Accessibility=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
-Object="\"Object.Appearance.WidgetStyle.TextStyle\" \"Object.Appearance.WidgetStyle.TextStyle.Font\" "
+Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 EditableTextBox="\"Object.Appearance.WidgetStyle.TextStyle\" \"Object.Appearance.WidgetStyle.TextStyle.Font\" "
@@ -2317,4 +2331,7 @@ Advanced=False
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
