--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -169,7 +169,7 @@ MRUItem0=/Game/TestMap
 LastLevel=/Game/TestMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -2119,8 +2119,8 @@ NewLevelDialog.TimeStamp=2024.09.19-01.55.00
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2024.09.19-01.54.50
 HierarchicalLODUtilities.LastCompileMethod=Unknown
-Opcua_Unreal_Client.TimeStamp=2024.09.26-00.51.02
-Opcua_Unreal_Client.LastCompileMethod=Runtime
+Opcua_Unreal_Client.TimeStamp=2024.09.27-06.03.51
+Opcua_Unreal_Client.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2024.09.19-01.54.48
 ExternalImagePicker.LastCompileMethod=Unknown
 Voice.TimeStamp=2024.09.19-01.55.15
